<resources>
    <string name="app_name">RecursosNativosBootcamp</string>
    <string name="btn_set_event">Set Event</string>
    <string name="btn_set_contact">Set Contact</string>
    <string name="btn_set_photos">Set Photos</string>
    <string name="btn_set_location">Set Location</string>
    <string name="txt_selected_image">Imagem a ser selecionada pelo usuário</string>
    <string name="text_image_selected">Selecione uma imagem</string>
    <string name="text_take_picture">Tirar uma foto</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>