<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_event"
        android:layout_margin="20dp"
        android:padding="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_contact"
        android:layout_margin="20dp"
        android:padding="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_photos"
        android:layout_margin="20dp"
        android:padding="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_location"
        android:layout_margin="20dp"
        android:padding="10dp"/>

</LinearLayout>