<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".PhotoActivity">

    <ImageView
        android:id="@+id/ivImageUser"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:contentDescription="@string/txt_selected_image"
        android:scaleType="centerCrop"
        tools:src="@drawable/ic_image" />

    <Button
        android:id="@+id/btnPick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_image_selected"
        android:layout_margin="16dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_take_picture"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.AppCompat.Button.Colored"/>
</LinearLayout>